unpackaged/main/default/objects/LEXMAGICMOVER__NAMAttachmentConversionStatus__c/LEXMAGICMOVER__NAMAttachmentConversionStatus__c.object-meta.xml
<CustomObject>
    <label>NAMAttachmentConversionStatus</label>
    <nameField>
        <label>AttachmentConversionStatus</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAMAttachmentConversionStatus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>