unpackaged/main/default/objects/LEXMAGICMOVER__NAMAttachmentConversionStatus__c/fields/LEXMAGICMOVER__JobId__c.field-meta.xml
<CustomField>
    <fullName>LEXMAGICMOVER__JobId__c</fullName>
    <label>JobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>