unpackaged/main/default/objects/LEXMAGICMOVER__NAMAttachmentConversionStatus__c/fields/LEXMAGICMOVER__Type__c.field-meta.xml
<CustomField>
    <fullName>LEXMAGICMOVER__Type__c</fullName>
    <description>Used to check what type of process is in progress</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MigrationAttachment</fullName>
            </value>
            <value>
                <fullName>Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>